--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       </div>
     </section>
 
-    <diV class="idk5 container">
+    <div class="idk5 container">
       <div class="idk">
         <h5 class="sata">DISCOVER</h5>
         <h2 class="btext">Our Hot Services</h2>
@@ -83,41 +83,35 @@
           friend and favorite people
         </p>
       </div>
-    </diV>
-
-    <div class="container1">
-
-        <div class="idk4">
-            <img src="images/poto6.png" alt="" />
-            <h3 class="idk2">CRUISE TOUR</h3>
-            <p class="idk3">
-              We hope you can visit and enjoy it ths beautiful places with your
-              friend and favorite people
-            </p>
-          </div>
-        
-
-          <div class="idk4">
-            <img src="images/poto7.png" alt="" />
-            <h3 class="idk2">FIRE CAMP</h3>
-            <p class="idk3">
-              We hope you can visit and enjoy it ths beautiful places with your
-              friend and favorite people
-            </p>
-          </div>
-
-          <div class="idk4">
-            <img src="images/poto8.png" alt="" />
-            <h3 class="idk2">CORPORATE HOLYDAYS</h3>
-            <p class="idk3">
-              We hope you can visit and enjoy it ths beautiful places with your
-              friend and favorite people
-            </p>
-          </div>
-
     </div>
 
+    <div class="container1">
+      <div class="idk4">
+        <img src="images/poto6.png" alt="" />
+        <h3 class="idk2">CRUISE TOUR</h3>
+        <p class="idk3">
+          We hope you can visit and enjoy it ths beautiful places with your
+          friend and favorite people
+        </p>
+      </div>
 
+      <div class="idk4">
+        <img src="images/poto7.png" alt="" />
+        <h3 class="idk2">FIRE CAMP</h3>
+        <p class="idk3">
+          We hope you can visit and enjoy it ths beautiful places with your
+          friend and favorite people
+        </p>
+      </div>
 
+      <div class="idk4">
+        <img src="images/poto8.png" alt="" />
+        <h3 class="idk2">CORPORATE HOLYDAYS</h3>
+        <p class="idk3">
+          We hope you can visit and enjoy it ths beautiful places with your
+          friend and favorite people
+        </p>
+      </div>
+    </div>
   </body>
 </html>
